--- a/src/v-plot/template.html
+++ b/src/v-plot/template.html
@@ -1,5 +1,8 @@
 <div>
-    <fragment>
+    <div v-if="debug" class="v-object">{{compProps}}
+        ${require('./fragment.html')}
+    </div>
+    <fragment v-if="!debug" props="compProps">
         ${require('./fragment.html')}
     </fragment>
 </div>
