fix v-plot, v-shading, v-track

--- a/src/v-header-shading/fragment.html
+++ b/src/v-header-shading/fragment.html
@@ -5,7 +5,7 @@
         :fill-transparency="1" 
         :line-color="0x101010" :line-width="1"
         :content-style="contentStyle"
-        :view-width="textWidth(curveLowValue) + 5"
+        :view-width="textWidth(curveLowValue)"
         :view-height="textHeight(curveLowValue)"
         :view-pos-x="5"
         :view-pos-y="15 - textHeight(curveLowValue) / 2"
@@ -15,10 +15,10 @@
         :fill-color="fillColor"
         :fill-transparency="1"
         line-color="0x010101" :line-width="1"
-        :view-width="textWidth(shadingName) + 10"
+        :view-width="textWidth(shadingName)"
         :view-height="textHeight(shadingName)"
         :content-style="contentStyle"
-        :view-pos-x="viewWidth/2 - (textWidth(shadingName) + 10) / 2"
+        :view-pos-x="viewWidth/2 - textWidth(shadingName) / 2"
         :view-pos-y="15 - textHeight(shadingName) / 2"
     />
     <v-textbox 
@@ -27,7 +27,7 @@
         :fill-transparency="1" 
         :line-color="0x101010" :line-width="1"
         :content-style="contentStyle"
-        :view-width="textWidth(curveHighValue) + 5"
+        :view-width="textWidth(curveHighValue)"
         :view-height="textHeight(curveHighValue)"
         :view-pos-x="viewWidth - textHeight(curveHighValue) - 10"
         :view-pos-y="15 - textHeight(curveHighValue) / 2"
