--- a/src/v-plot/fragment.html
+++ b/src/v-plot/fragment.html
@@ -1,82 +1,121 @@
-
-<v-track 
-    v-for="(track, idx) in ($store.state.plot && $store.state.plot.depth_axes)"
-    :key="'depth_track' + idx + track.idDepthAxis" :name="track.title"
-    :track-id="track.idDepthAxis" :order-num="track.orderNum"
-    :justification="track.justification" :show-title="track.showTitle"
-    :view-pos-x="tracksPosXList[track.title + ' ' + idx]" :view-pos-y="-viewPosY"
-    track-type="Depth Track" :unit="track.unitType"
-    :major-tick-length="track.majorTickLength" :minor-ticks="track.minorTickNum"
-    :track-real-min-y="$store.state.currentPlotTop"
-    :track-real-max-y="$store.state.currentPlotBottom + 100"
-    :view-width="convertWidth(track.widthUnit, track.width)" :view-height="viewHeight"
-    :track-header-height="viewPosY" 
-    :track-header-resize="trackHeaderResize"
-    :on-resize="trackResize"
-    :fill-color="track.trackBackground" :fill-transparency="1"
-    x-transform="none" y-transform="linear"
-    :real-min-y="$store.state.plotTop" :real-max-y="$store.state.plotBottom"
-    cursor="crosshair" :enabled="true"
-/>
-<v-track
-    v-for="(track, idx) in ($store.state && $store.state.zone_tracks)"
-    track-type='Zone Track' :grid="false"
-    :key="'zone_track' + idx + track.idZoneTrack" :name="track.title"
-    :track-id="track.idZoneTrack" :order-num="track.orderNum"
-    :justification="track.topJustification" :show-title="track.showTitle"
-    :view-pos-x="tracksPosXList[track.title + ' ' + idx]" :view-pos-y="-viewPosY"
-    :view-width="convertWidth(track.widthUnit, track.width)" :view-height="viewHeight"
-    :track-real-min-y="$store.state.currentPlotTop"
-    :track-real-max-y="$store.state.currentPlotBottom + 100"
-    :track-header-height="viewPosY" 
-    :track-header-resize="trackHeaderResize"
-    :on-resize="trackResize"
-    :fill-color="track.color" :fill-transparency="1"
-    x-transform="none" y-transform="linear"
-    :real-min-y="$store.state.plotTop" :real-max-y="$store.state.plotBottom"
-    :enabled="true">
-    <v-xone
-        v-for="(zone, i) in $store.state.zone_tracks[idx]['zones']"
-        :key="'zone' + i + track.idZoneTrack"
-        :zoneset-id="zone.idZoneSet" :zone-id="zone.idZone"
-        :knob-flags="[true, true]"
-        :fill-color="zone.zone_template.background" :fill-transparency="1"
-        direction="vertical" :name="zone.zone_template.name"
-        :real-min-y="zone.startDepth" 
-        :real-max-y="zone.endDepth + 100"
-        :handle-real-y="zoneResize"
-        x-transform="none" y-transform="linear"
-        :view-width="convertWidth(track.widthUnit, track.width)"
-        :content="zone.zone_template.name"
-        :content-style="zoneContentStyle"
-        :no-label="false"
-        :no-fill="false" />
-</v-track>
-<v-track
-    v-for="(track, idx) in ($store.state && $store.state.tracks)"
-    :grid="track.showDepthGrid"
-    :key="'track' + idx + track.idTrack" :name="track.title"
-    :track-id="track.idTrack" :order-num="track.orderNum"
-    :justification="track.topJustification" :show-title="track.showTitle"
-    :view-pos-x="tracksPosXList[track.title + ' ' + idx]" :view-pos-y="-viewPosY"
-    :view-width="convertWidth(track.widthUnit, track.width)" :view-height="viewHeight"
-    :track-real-min-y="$store.state.currentPlotTop"
-    :track-real-max-y="$store.state.currentPlotBottom + 100"
-    :track-header-height="viewPosY" 
-    :track-header-resize="trackHeaderResize"
-    :on-resize="trackResize"
-    :fill-color="track.color" :fill-transparency="1"
-    x-transform="linear" y-transform="linear"
-    :real-min-x="80" :real-max-x="150"
-    :real-min-y="$store.state.plotTop" :real-max-y="$store.state.plotBottom"
-    :enabled="true">
-    <v-curve
-        v-for="(line, idx) in track.lines"
-        :key="line.alias + idx + line.idCurve" :name="line.alias"
-        :real-path="line.curveData" :unit="line.unit"
-        :symbol-color="line.lineColor" :line-width="line.lineWidth"
-        :left-value="line.minValue" :right-value="line.maxValue"
-        :view-width="convertWidth(track.widthUnit, track.width)" :view-height="trackBodyScale"
-    />
-</v-track>
+<v-container
+    :view-pos-x="viewPosX" :view-pos-y="0"
+    :view-width="viewWidth" :view-height="viewHeight"
+    layout-direction="horizontal"
+    >   
+    <fragment
+        v-for="(track, idx) in sortedTracks"
+        :key="idx">
+        <v-track
+            v-if="track.idDepthAxis" :name="track.title"
+            :constrained="true"
+            :track-id="track.idDepthAxis" :order-num="track.orderNum"
+            :justification="track.justification" :show-title="track.showTitle"
+            :view-pos-y="-viewPosY"
+            track-type="Depth Track" :unit="track.unitType"
+            :major-tick-length="track.majorTickLength" :minor-ticks="track.minorTickNum"
+            :track-real-min-y="$store.state.currentPlotTop"
+            :track-real-max-y="$store.state.currentPlotBottom"
+            :view-width="convertWidth(track.widthUnit, track.width)" :view-height="viewHeight"
+            :track-header-height="viewPosY" 
+            :track-header-resize="trackHeaderResize"
+            :on-resize="trackResize"
+            :fill-color="track.trackBackground" :fill-transparency="1"
+            x-transform="none" y-transform="linear"
+            :real-min-y="$store.state.plotTop" :real-max-y="$store.state.plotBottom"
+            cursor="crosshair" :enabled="true"
+            />
+            <v-track
+                v-if="track.idZoneTrack"
+                track-type='Zone Track' :grid="false"
+                :constrained="true"
+                :key="'zone_track' + idx + track.idZoneTrack" :name="track.title"
+                :track-id="track.idZoneTrack" :order-num="track.orderNum"
+                :justification="track.topJustification" :show-title="track.showTitle"
+                :view-pos-y="-viewPosY"
+                :view-width="convertWidth(track.widthUnit, track.width)" :view-height="viewHeight"
+                :track-real-min-y="$store.state.currentPlotTop"
+                :track-real-max-y="$store.state.currentPlotBottom"
+                :track-header-height="viewPosY" 
+                :track-header-resize="trackHeaderResize"
+                :on-resize="trackResize"
+                :fill-color="track.color" :fill-transparency="1"
+                x-transform="none" y-transform="linear"
+                :real-min-y="$store.state.plotTop" :real-max-y="$store.state.plotBottom"
+                :enabled="true">
+                <v-xone
+                    v-for="(zone, i) in sortedTracks[idx]['zones']"
+                    :key="'zone' + i + track.idZoneTrack"
+                    :zoneset-id="zone.idZoneSet" :zone-id="zone.idZone"
+                    :knob-flags="[true, true]"
+                    :fill-color="zone.zone_template.background" :fill-transparency="1"
+                    direction="vertical" :name="zone.zone_template.name"
+                    :real-min-y="zone.startDepth" 
+                    :real-max-y="zone.endDepth"
+                    :handle-real-y="zoneResize"
+                    x-transform="none" y-transform="linear"
+                    :view-width="convertWidth(track.widthUnit, track.width)"
+                    :content="zone.zone_template.name"
+                    :content-style="zoneContentStyle"
+                    :no-label="false"
+                    :no-fill="false" />
+            </v-track>
+            <v-track
+                v-if="track.idTrack"
+                :constrained="true"
+                :key="'track' + idx + track.idTrack" :name="track.title"
+                :track-id="track.idTrack" :order-num="track.orderNum"
+                :justification="track.topJustification" :show-title="track.showTitle"
+                :view-pos-y="-viewPosY"
+                :view-width="convertWidth(track.widthUnit, track.width)" :view-height="viewHeight"
+                :track-real-min-y="$store.state.currentPlotTop"
+                :track-real-max-y="$store.state.currentPlotBottom"
+                :track-header-height="viewPosY" 
+                :track-header-resize="trackHeaderResize"
+                :on-resize="trackResize"
+                :fill-color="track.color" :fill-transparency="1"
+                x-transform="none" y-transform="linear"
+                :real-min-y="$store.state.plotTop" :real-max-y="$store.state.plotBottom"
+                :major-ticks="track.majorTicks" :minor-ticks="track.minorTicks"
+                :show-depth-grid="track.showDepthGrid" :show-value-grid="track.showValueGrid"
+                :enabled="true">
+                <fragment
+                    v-for="(shading, idx) in track.shadings"
+                    :key="shading.name + idx + shading.idShading">
+                    <v-shading
+                        :name="shading.name"
+                        v-if="JSON.parse(shading.fill).display"
+                        :type-fill-color="formatShadingTypeFill(JSON.parse(shading.fill).varShading.varShadingType)"
+                        :min-color="JSON.parse(shading.fill).varShading.gradient.startColor"
+                        :max-color="JSON.parse(shading.fill).varShading.gradient.endColor"
+                        :custom-fill-values="getShadingCustomFills(JSON.parse(shading.fill).varShading.customFills)"
+                        :fill-pattern-list="getShadingPatternList(JSON.parse(shading.fill).varShading.customFills)"
+                        :foreground-color-list="getShadingForegroundList(JSON.parse(shading.fill).varShading.customFills)"
+                        :background-color-list="getShadingBackgroundList(JSON.parse(shading.fill).varShading.customFills)"
+                        :view-width="convertWidth(track.widthUnit, track.width)" :view-height="trackBodyScale"
+                        y-transform="linear"
+                        :x-transform="getShadingInfo(track.lines, shading).xTransform"
+                        :real-min-y="$store.state.plotTop" :real-max-y="$store.state.plotBottom"
+                        :real-min-x="track.lines.filter(line => line.idLine === shading.idRightLine)[0].minValue"
+                        :real-max-x="track.lines.filter(line => line.idLine === shading.idRightLine)[0].maxValue"
+                        :curve-low-value="JSON.parse(shading.fill).varShading.startX"
+                        :curve-high-value="JSON.parse(shading.fill).varShading.endX"
+                        :real-left="shading.leftFixedValue"
+                        :real-right="shading.rightFixedValue || track.lines.filter(line => line.idLine === shading.idRightLine)[0].curveData"
+                        />
+                </fragment>
+                <v-curve
+                    v-for="(line, idx) in track.lines"
+                    :key="line.alias + idx + line.idCurve" :name="line.alias"
+                    :real-path="line.curveData" :unit="line.unit"
+                    :symbol-color="line.symbolFillStyle" :line-width="line.lineWidth"
+                    :line-color="line.lineColor" :line-dash="line.lineStyle ? line.lineStyle : ''"
+                    :real-min-x="line.minValue" :real-max-x="line.maxValue"
+                    :real-min-y="$store.state.plotTop" :real-max-y="$store.state.plotBottom"
+                    :x-transform="line.displayType === 'Linear'? 'linear': 'loga'" y-transform="linear"
+                    :view-width="convertWidth(track.widthUnit, track.width)" :view-height="trackBodyScale"
+                />
+            </v-track>
+    </fragment>
+</v-container>
 ${require('../v-layer/fragment.html')}
